--- a/package.xml
+++ b/package.xml
@@ -32,7 +32,9 @@
   <!-- Dependencies can be catkin packages or system dependencies -->
   <!-- Examples: -->
   <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
-  <!--   <depend>roscpp</depend> -->
+    <depend>realsense2_camera</depend>
+    <depend>openpose_ros</depend>
+    <depend>image_recognition_msgs</depend>
   <!--   Note that this is equivalent to the following: -->
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
@@ -73,10 +75,10 @@
   <!-- <exec_depend>geometry_msgs</exec_depend> -->
   <!-- <exec_depend>roscpp</exec_depend> -->
   <!-- <exec_depend>rospy</exec_depend> -->
-  <exec_depend>openpose_ros</exec_depend>
+  <!-- <exec_depend>openpose_ros</exec_depend> -->
   <!-- <exec_depend>std_msgs</exec_depend> -->
   <!-- <exec_depend>strands_navigation_msgs</exec_depend> -->
-  <exec_depend>image_recognition_msgs</exec_depend>
+  <!-- <exec_depend>image_recognition_msgs</exec_depend> -->
   <!-- <exec_depend>tf</exec_depend> -->
   <!-- <exec_depend>topological_navigation</exec_depend> -->
 
