--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,11 @@ find_package(catkin REQUIRED COMPONENTS
 
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   PeopleStamped.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  Joint.msg
+  Joints.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -46,10 +46,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
- # generate_messages(
- #   DEPENDENCIES
- #   std_msgs  # Or other packages containing msgs
- # )
+ generate_messages(
+   DEPENDENCIES
+   std_msgs  # Or other packages containing msgs
+ )
 
 
 catkin_package(
