--- a/package.xml
+++ b/package.xml
@@ -34,7 +34,10 @@
   <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
     <depend>realsense2_camera</depend>
     <depend>openpose_ros</depend>
+    <depend>actionlib</depend>
     <depend>image_recognition_msgs</depend>
+    <depend>actionlib_msgs</depend>
+    <depend>move_base_msgs</depend>
   <!--   Note that this is equivalent to the following: -->
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
