--- a/package.xml
+++ b/package.xml
@@ -38,6 +38,7 @@
     <depend>image_recognition_msgs</depend>
     <depend>actionlib_msgs</depend>
     <depend>move_base_msgs</depend>
+    <depend>std_msgs</depend>
   <!--   Note that this is equivalent to the following: -->
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
