--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_message_files(
   FILES
   Joint.msg
   Joints.msg
+  Log.msg
   Pose.msg
   Command.msg
 )
@@ -85,6 +86,7 @@ install(PROGRAMS
   scripts/skeleton_converter_node
   scripts/skeleton_stabilizer_node
   scripts/skeleton_comparator_node
+  scripts/skeleton_logger_node
   scripts/robot_control_node
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
   ${USE_SOURCE_PERMISSIONS}
