--- a/package.xml
+++ b/package.xml
@@ -39,6 +39,7 @@
     <depend>actionlib_msgs</depend>
     <depend>move_base_msgs</depend>
     <depend>std_msgs</depend>
+    <depend>sensor_msgs</depend>
   <!--   Note that this is equivalent to the following: -->
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
