--- a/package.xml
+++ b/package.xml
@@ -40,8 +40,11 @@
     <depend>qsr_lib</depend>
     <depend>actionlib_msgs</depend>
     <depend>move_base_msgs</depend>
+    <depend>geometry_msgs</depend>
     <depend>std_msgs</depend>
     <depend>sensor_msgs</depend>
+    <depend>rasberry_people_perception</depend>
+    <depend>rasberry_navigation</depend>
   <!--   Note that this is equivalent to the following: -->
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
