--- a/package.xml
+++ b/package.xml
@@ -43,6 +43,7 @@
     <depend>geometry_msgs</depend>
     <depend>std_msgs</depend>
     <depend>sensor_msgs</depend>
+    <depend>bayes_people_tracker</depend>
     <depend>rasberry_people_perception</depend>
     <depend>rasberry_navigation</depend>
   <!--   Note that this is equivalent to the following: -->
