--- a/package.xml
+++ b/package.xml
@@ -42,6 +42,7 @@
     <depend>move_base_msgs</depend>
     <depend>geometry_msgs</depend>
     <depend>std_msgs</depend>
+    <depend>std_srvs</depend>
     <depend>sensor_msgs</depend>
     <depend>marvelmind_nav</depend>
     <depend>bayes_people_tracker</depend>
