action recognition pipeline integrated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ install(PROGRAMS
   scripts/robot_control_node
   scripts/scheduler_node
   scripts/picker_mover_node
+  scripts/experimenter_node
 #  scripts/skeleton_extractor_node
 #  scripts/skeleton_converter_node
 #  scripts/skeleton_stabilizer_node
